larger, higher res friend image  friend image on right  bigger friend name text

--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         android:name="com.twofours.surespot.SurespotApplication"
         android:icon="@drawable/surespotlauncher"
         android:label="surespot"
-        android:theme="@style/BlackTheme">
+        android:theme="@style/DefaultTheme">
 
         <meta-data
             android:name="com.google.android.gms.version"
