--- a/surespotcommon/build.gradle
+++ b/surespotcommon/build.gradle
@@ -5,10 +5,14 @@ android {
     buildToolsVersion "23.0.3"
 
 
+    defaultConfig {
+        minSdkVersion 15
+        targetSdkVersion 20
+    }
 }
 
 dependencies {
-    compile 'ch.acra:acra:4.5.0'
+    compile 'ch.acra:acra:4.8.5'
     compile 'com.madgag.spongycastle:core:1.53.0.0'
     compile 'com.madgag.spongycastle:prov:1.53.0.0'
 }
