okhttp doesn't allow cache seeding (https://github.com/square/okhttp/issues/2517) so put another disk cache in front of the http cache. Add local image to this cache on sending. Copy local image to http url when url received in message to avoid download of file we just sent.

--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile project(':imageViewTouch')
     compile project(':androidkeystore')
     compile project(":ColorPickerPreference")
-    //using 3.0.1 because that's what socket.io-client-0.7.0 pulls down
+    compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:okhttp-ws:3.2.0'
