--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.twofours.surespot"
           xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="65"
-          android:versionName="65">
+          android:versionCode="66"
+          android:versionName="66-alpha-3">
 
 
     <permission
@@ -107,6 +107,13 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+
+                <data android:mimeType="image/*"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND_MULTIPLE"/>
 
                 <category android:name="android.intent.category.DEFAULT"/>
 
