--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.twofours.surespot"
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="66"
-          android:versionName="66-alpha-3">
+          android:versionName="66">
 
 
     <permission
