--- a/imageViewTouch/build.gradle
+++ b/imageViewTouch/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+
+    defaultConfig {
+        minSdkVersion 15
+        targetSdkVersion 20
+    }
 }
 
 dependencies {
