--- a/libs/android-ColorPickerPreference/ColorPickerPreference/build.gradle
+++ b/libs/android-ColorPickerPreference/ColorPickerPreference/build.gradle
@@ -3,7 +3,14 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+
+    defaultConfig {
+        minSdkVersion 15
+        targetSdkVersion 20
+    }
 }
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
