--- a/viewpagerindicator/build.gradle
+++ b/viewpagerindicator/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
+    defaultConfig {
+        minSdkVersion 15
+        targetSdkVersion 20
+    }
+
 }
 
 dependencies {
