--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     compile files('libs/google-oauth-client-1.17.0-rc.jar')
     //compile files('libs/jsr305-1.3.9.jar')
     compile 'io.socket:socket.io-client:0.7.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    compile 'com.google.zxing:core:3.2.0'
 }
