launch mode singleTask again

--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -98,7 +98,7 @@
             android:name="com.twofours.surespot.activities.MainActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_main"
-
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateUnchanged">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
