--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.twofours.surespot"
           xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="67"
-          android:versionName="67">
+          android:versionCode="68"
+          android:versionName="68-debug">
 
 
     <permission
