remove surespot-common

--- a/androidkeystore/build.gradle
+++ b/androidkeystore/build.gradle
@@ -11,5 +11,6 @@ android {
 }
 
 dependencies {
-    compile project(':surespotcommon')
+    compile 'com.madgag.spongycastle:core:1.54.0.0'
+    compile 'com.madgag.spongycastle:prov:1.54.0.0'
 }
