--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -28,7 +28,7 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('/Users/adam/dev/surespot-android_keystore/custom-debug.keystore')
+            storeFile file('/home/adam/raid/2fours/android_keystore/custom-debug.keystore')
                     storePassword "android"
                     keyAlias "androiddebugkey"
                     keyPassword "android"
@@ -40,7 +40,6 @@ android {
 }
 
 dependencies {
-    compile project(':surespotcommon')
     compile project(':viewpagerindicator')
     compile project(':imageViewTouch')
     compile project(':androidkeystore')
@@ -65,4 +64,5 @@ dependencies {
     compile files('libs/google-oauth-client-1.17.0-rc.jar')
     //compile files('libs/jsr305-1.3.9.jar')
     compile 'io.socket:socket.io-client:0.8.2'
+    compile 'ch.acra:acra:4.8.5'
 }
