--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -28,10 +28,7 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('/home/adam/raid/2fours/android_keystore/custom-debug.keystore')
-                    storePassword "android"
-                    keyAlias "androiddebugkey"
-                    keyPassword "android"
+            storeFile file('C:/Users/Dubz/.android/debug.keystore')
         }
     }
     dexOptions {
