--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,6 @@
 include ':imageViewTouch'
 include ':androidkeystore'
 include ':viewpagerindicator'
-include ':surespot', ':ColorPickerPreference'
-project(':ColorPickerPreference').projectDir = new File('libs/android-ColorPickerPreference/ColorPickerPreference')
+include ':surespot'
 include ':libs:emojicon'
 
