--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -52,7 +52,6 @@ dependencies {
     compile project(':viewpagerindicator')
     compile project(':imageViewTouch')
     compile project(':androidkeystore')
-    compile project(":ColorPickerPreference")
     compile project(':libs:emojicon')
 
     compile 'com.android.support:support-v4:25.3.1'
@@ -80,4 +79,5 @@ dependencies {
     }
     compile 'ch.acra:acra:4.8.5'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.5'
+    compile 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.0'
 }
