--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ include ':surespot'
 include ':libs:emojicon'
 include ':libs:androidkeystore'
 include ':libs:viewpagerindicator'
+include ':libs:cameraview'
