--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -52,11 +52,10 @@ dependencies {
     compile project(':libs:viewpagerindicator')
     compile project(':libs:androidkeystore')
     compile project(':libs:emojicon')
-
+    compile project(':libs:cameraview')
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-
     compile 'pub.devrel:easypermissions:0.2.1'
     compile('com.google.api-client:google-api-client-android:1.22.0') {
         exclude group: 'org.apache.httpcomponents'
@@ -64,14 +63,12 @@ dependencies {
     compile('com.google.apis:google-api-services-drive:v3-rev65-1.22.0') {
         exclude group: 'org.apache.httpcomponents'
     }
-
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
     compile 'com.google.android.gms:play-services-gcm:10.2.1'
     compile 'com.google.android.gms:play-services-analytics:10.2.1'
-
     compile 'com.android.support:multidex:1.0.1'
     compile('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
