--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -55,7 +55,8 @@ dependencies {
     compile project(':libs:cameraview')
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+
     compile 'pub.devrel:easypermissions:0.2.1'
     compile('com.google.api-client:google-api-client-android:1.22.0') {
         exclude group: 'org.apache.httpcomponents'
@@ -77,4 +78,5 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.5'
     compile 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.0'
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:2.2.5'
+    compile 'io.fotoapparat.fotoapparat:library:master-SNAPSHOT'
 }
