fix gradle whinging

--- a/libs/androidkeystore/build.gradle
+++ b/libs/androidkeystore/build.gradle
@@ -11,6 +11,6 @@ android {
 }
 
 dependencies {
-    compile 'com.madgag.spongycastle:core:1.54.0.0'
-    compile 'com.madgag.spongycastle:prov:1.54.0.0'
+    api 'com.madgag.spongycastle:core:1.54.0.0'
+    api 'com.madgag.spongycastle:prov:1.54.0.0'
 }
