--- a/libs/cameraview/build.gradle
+++ b/libs/cameraview/build.gradle
@@ -39,15 +39,15 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-annotations:25.3.1"
-    compile "com.android.support:support-v4:25.3.1"
+    implementation "com.android.support:support-annotations:25.3.1"
+    implementation "com.android.support:support-v4:25.3.1"
 
     // Tests
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test:runner:0.5') {
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('com.android.support.test:runner:0.5') {
         exclude module: 'support-annotations'
     }
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2') {
         exclude module: 'support-annotations'
     }
 }
