--- a/libs/emojicon/build.gradle
+++ b/libs/emojicon/build.gradle
@@ -12,6 +12,6 @@ android {
 
 
 dependencies {
-    compile 'com.android.support:support-v4:25.3.0'
-    compile 'com.android.support:appcompat-v7:25.3.0'
+    implementation 'com.android.support:support-v4:25.3.0'
+    implementation 'com.android.support:appcompat-v7:25.3.0'
 }
