--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -53,10 +53,12 @@ dependencies {
     implementation project(':libs:androidkeystore')
     implementation project(':libs:emojicon')
     implementation project(':libs:cameraview')
-    implementation 'com.android.support:support-v4:25.3.1'
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support:design:25.3.1'
+    //implementation 'com.android.support:support-v4:25.3.1'
+    implementation "com.android.support:support-compat:27.1.1"
+    implementation "com.android.support:support-core-utils:27.1.1"
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 
+    implementation 'com.android.support:design:27.1.1'
     implementation 'pub.devrel:easypermissions:0.2.1'
     implementation('com.google.api-client:google-api-client-android:1.22.0') {
         exclude group: 'org.apache.httpcomponents'
@@ -67,9 +69,9 @@ dependencies {
     implementation 'com.jakewharton:disklrucache:2.0.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.google.android.gms:play-services-auth:10.2.1'
-    implementation 'com.google.android.gms:play-services-gcm:10.2.1'
-    implementation 'com.google.android.gms:play-services-analytics:10.2.1'
+    implementation 'com.google.android.gms:play-services-auth:11.0.2'
+    implementation 'com.google.android.gms:play-services-gcm:11.0.2'
+    implementation 'com.google.android.gms:play-services-analytics:11.0.2'
     implementation 'com.android.support:multidex:1.0.1'
     implementation('io.socket:socket.io-client:1.0.0') {
         exclude group: 'org.json', module: 'json'
