sync appcompat lib, suppress static inner class lint for now

--- a/libs/viewpagerindicator/build.gradle
+++ b/libs/viewpagerindicator/build.gradle
@@ -11,6 +11,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:25.3.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 }
 
