--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -38,7 +38,7 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('/home/adam/dev/surespot/keystore/custom-debug.keystore')
+            storeFile file('/Users/adam/dev/surespot/keystore/custom-debug.keystore')
             storePassword "android"
             keyAlias "androiddebugkey"
             keyPassword "android"
@@ -53,13 +53,12 @@ dependencies {
     implementation project(':libs:viewpagerindicator')
     implementation project(':libs:androidkeystore')
     implementation project(':libs:emojicon')
-    implementation project(':libs:cameraview')
-    //implementation 'com.android.support:support-v4:25.3.1'
-    implementation "com.android.support:support-compat:27.1.1"
-    implementation "com.android.support:support-core-utils:27.1.1"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation "com.android.support:support-compat:28.0.0"
+    implementation "com.android.support:support-core-utils:28.0.0"
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'pub.devrel:easypermissions:0.2.1'
     implementation('com.google.api-client:google-api-client-android:1.22.0') {
         exclude group: 'org.apache.httpcomponents'
