--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
         android:largeHeap="true"
         tools:replace="android:label">
 
-        <!-- Used for install referral measurement -->
-        <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
+        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
+        <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false" />
 
         <receiver android:name="com.twofours.surespot.SurespotBroadcastReceiver">
             <intent-filter>
